--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ steps:
     publishWebProjects: true
 - task: AzureWebApp@1
   inputs:
-    azureSubscription: 'Towards-azure-portal-automatic-connection'
+    azureSubscription: 'Azure-Devops Svc Connection'
     appType: 'webAppLinux'
     appName: 'Webcalcualator'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
